<?xml version="1.0"?>
<package>
  <name>drift_correction</name>
  <version>0.1.0</version>
  <description> Simple ROS package for correcting the drift from IMU using sensor data , such as Motion Capture system </description>

  <maintainer email="maciej.zurad@gmail.com">Maciej Zurad</maintainer>

  <license>MIT</license>

  <url type="website">@TODO add ROS wiki website</url>

  <url type="bugtracker">https://github.com/Asiron/drift_correction/issues</url>
  <url type="repository">https://github.com/Asiron/drift_correction</url>

  <author email="maciej.zurad@gmail.com">Maciej Zurad</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>

</package>